[package]
name = "scrollrack-core"
version = "0.5.0"
edition = "2021"

[dependencies]
scryfall = "0.16.1"
regex = "1.5.5"
lazy_static = "1.4.0"
itertools = "0.10.3"
chrono = "0.4.19"
anyhow = "1.0"
rayon = "1.6"
futures = "0.3.28"
tabled = "0.15.0"
tera = "1.19.1"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.31.0"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
failure = "0.1.8"
